--- a/index.html
+++ b/index.html
@@ -1,20 +1,97 @@
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Ping Saturn</title>
-  </head>
-  <body>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Ping Saturn</title>
+  <style>
+    /* Dark Apple-like styling */
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background-color: #1c1c1e;
+      color: #f2f2f7;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .container {
+      background-color: #2c2c2e;
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.6);
+      width: 90%;
+      max-width: 400px;
+      text-align: center;
+    }
+    h1 {
+      font-size: 1.5rem;
+      margin-bottom: 20px;
+      font-weight: 600;
+      color: #ffffff;
+    }
+    input {
+      width: 100%;
+      padding: 12px 14px;
+      margin: 10px 0 20px 0;
+      border-radius: 12px;
+      border: none;
+      font-size: 1rem;
+      background-color: #3a3a3c;
+      color: #ffffff;
+      outline: none;
+    }
+    input::placeholder {
+      color: #8e8e93;
+    }
+    button {
+      width: 100%;
+      padding: 14px;
+      border: none;
+      border-radius: 12px;
+      font-size: 1rem;
+      font-weight: 600;
+      background-color: #0a84ff;
+      color: white;
+      cursor: pointer;
+      transition: background-color 0.2s;
+    }
+    button:hover {
+      background-color: #0060df;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
     <h1>Ping Saturn</h1>
-    <button onclick="ping()">Ping</button>
+    <input id="nameInput" type="text" placeholder="Enter your name">
+    <button onclick="sendPing()">Send Ping</button>
+  </div>
 
-    <script>
-      const WEBHOOK = "https://api.pushcut.io/yIplredoAJ4kPmQMqcja7/notifications/Aadity%E2%80%99s%20Ping";
+  <script>
+    // Map names to their specific webhooks (case-insensitive keys)
+    const WEBHOOKS = {
+      "aadity": "https://api.pushcut.io/yIplredoAJ4kPmQMqcja7/notifications/Aadity%E2%80%99s%20Ping"
+      // Add more people here, e.g.:
+      // "bob": "https://api.pushcut.io/.../Bob%20Ping",
+      // "alice": "https://api.pushcut.io/.../Alice%20Ping"
+    };
 
-      function ping() {
-        fetch(WEBHOOK, { mode: "no-cors" })
-          .then(() => alert("Ping sent!"))
-          .catch(() => alert("Failed to send ping"));
+    function sendPing() {
+      const name = document.getElementById("nameInput").value.trim().toLowerCase();
+      if (!name) {
+        alert("Please enter your name.");
+        return;
       }
-    </script>
-  </body>
+      if (!(name in WEBHOOKS)) {
+        alert("Name not recognized.");
+        return;
+      }
+      const url = WEBHOOKS[name];
+      fetch(url, { mode: "no-cors" })
+        .then(() => alert("Ping sent for " + name.charAt(0).toUpperCase() + name.slice(1)))
+        .catch(() => alert("Failed to send ping"));
+    }
+  </script>
+</body>
 </html>
