--- a/index.html
+++ b/index.html
@@ -1,116 +1,126 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Ping Saturn</title>
   <style>
-    /* Base setup */
-    html, body {
-      height: 100%;
-      margin: 0;
+    /* Reset */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+
+    body {
       background: #000; /* true black for OLED */
+      color: #fff;
+      font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
-      font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", sans-serif;
-      color: white;
+      height: 100vh;
+      overflow: hidden;
     }
 
-    /* Animated gradient background */
-    body::before {
-      content: "";
+    #particles-js {
       position: absolute;
-      width: 200%;
-      height: 200%;
-      background: radial-gradient(circle at 20% 20%, #00f5ff55, transparent 60%),
-                  radial-gradient(circle at 80% 80%, #ff00ff55, transparent 60%),
-                  radial-gradient(circle at 50% 50%, #0080ff55, transparent 60%);
-      animation: move 15s infinite linear;
+      width: 100%;
+      height: 100%;
       z-index: 0;
     }
 
-    @keyframes move {
-      0% { transform: translate(0,0) rotate(0deg); }
-      50% { transform: translate(-10%, -10%) rotate(180deg); }
-      100% { transform: translate(0,0) rotate(360deg); }
-    }
-
-    /* Glass box */
     .glass-box {
       position: relative;
       z-index: 1;
-      background: rgba(255, 255, 255, 0.08);
-      border: 1px solid rgba(255, 255, 255, 0.18);
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.15);
       border-radius: 20px;
       padding: 40px;
-      backdrop-filter: blur(20px) saturate(180%);
-      -webkit-backdrop-filter: blur(20px) saturate(180%);
-      box-shadow: 0 8px 32px rgba(0,0,0,0.6);
+      backdrop-filter: blur(15px);
+      -webkit-backdrop-filter: blur(15px);
+      box-shadow: 0 0 20px rgba(255,255,255,0.1);
       text-align: center;
       width: 300px;
     }
 
-    h1 {
-      font-weight: 600;
-      margin-bottom: 20px;
-    }
-
     input {
-      width: 80%;
+      width: 100%;
       padding: 12px;
-      margin-bottom: 20px;
-      border-radius: 12px;
-      border: none;
-      outline: none;
+      border-radius: 10px;
+      border: 1px solid rgba(255,255,255,0.2);
+      background: rgba(255,255,255,0.1);
+      color: #fff;
       font-size: 16px;
-      background: rgba(255, 255, 255, 0.1);
-      color: white;
+      outline: none;
+      margin-bottom: 20px;
       text-align: center;
     }
 
     button {
-      padding: 12px 24px;
-      font-size: 16px;
-      font-weight: 600;
-      border-radius: 12px;
+      width: 100%;
+      padding: 12px;
+      border-radius: 10px;
       border: none;
-      color: white;
-      background: linear-gradient(135deg, #00c6ff, #0072ff);
+      background: rgba(255,255,255,0.15);
+      color: #fff;
+      font-size: 16px;
       cursor: pointer;
-      transition: transform 0.2s ease, opacity 0.2s ease;
+      transition: all 0.2s ease;
     }
 
     button:hover {
-      transform: scale(1.05);
-      opacity: 0.9;
+      background: rgba(255,255,255,0.25);
     }
   </style>
 </head>
 <body>
+  <div id="particles-js"></div>
+
   <div class="glass-box">
-    <h1>Ping Saturn</h1>
+    <h2>Ping Saturn</h2>
     <input type="text" id="nameInput" placeholder="Enter your name">
-    <br>
-    <button onclick="sendPing()">Ping</button>
+    <button onclick="ping()">Send Ping</button>
   </div>
 
+  <!-- particles.js library -->
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <script>
-    // Map names to webhooks (expand as needed)
+    // Webhook map
     const webhooks = {
       "aadity": "https://api.pushcut.io/yIplredoAJ4kPmQMqcja7/incoming-webhook/Aadity%27s%20Ping"
-      // Add more like: "alex": "URL", "john": "URL"
+      // add more like: "john": "https://api.pushcut.io/.../John%20Ping"
     };
 
-    function sendPing() {
+    function ping() {
       const name = document.getElementById("nameInput").value.trim().toLowerCase();
       if (webhooks[name]) {
         fetch(webhooks[name], { mode: "no-cors" })
-          .then(() => alert("Ping sent to Saturn for " + name))
+          .then(() => alert("Ping sent to Saturn"))
           .catch(() => alert("Ping failed"));
       } else {
-        alert("No webhook found for this name.");
+        alert("Name not recognized");
       }
     }
+
+    // ParticlesJS config
+    particlesJS("particles-js", {
+      "particles": {
+        "number": { "value": 80, "density": { "enable": true, "value_area": 800 } },
+        "color": { "value": "#ffffff" },
+        "shape": { "type": "circle" },
+        "opacity": { "value": 0.3, "random": true },
+        "size": { "value": 3, "random": true },
+        "line_linked": { "enable": false },
+        "move": { "enable": true, "speed": 1, "direction": "none", "random": true }
+      },
+      "interactivity": {
+        "events": {
+          "onhover": { "enable": true, "mode": "repulse" },
+          "onclick": { "enable": true, "mode": "push" }
+        },
+        "modes": {
+          "repulse": { "distance": 100 },
+          "push": { "particles_nb": 4 }
+        }
+      },
+      "retina_detect": true
+    });
   </script>
 </body>
 </html>
