--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     }
 
     button:hover {
-      background: rgba(255,255,255,0.25);
+      background: rgba(0,122,255,1);
     }
   </style>
 </head>
@@ -74,15 +74,16 @@
 
   <div class="glass-box">
     <h2>Ping Saturn</h2>
+    <br>
     <input type="text" id="nameInput" placeholder="Enter your name">
     <button onclick="sendPing()">Send Ping</button>
   </div>
 
   <!-- particles.js library -->
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
   <script>
-    // Webhook map
-    const webhooks = {
+    // Webhook map - fixed variable name
+    const WEBHOOKS = {
       "aadity": "https://api.pushcut.io/yIplredoAJ4kPmQMqcja7/notifications/Aadity%E2%80%99s%20Ping"
       // add more like: "john": "https://api.pushcut.io/.../John%20Ping"
     };
@@ -103,28 +104,32 @@
         .catch(() => alert("Failed to send ping"));
     }
 
-    // ParticlesJS config
-    particlesJS("particles-js", {
-      "particles": {
-        "number": { "value": 80, "density": { "enable": true, "value_area": 800 } },
-        "color": { "value": "#ffffff" },
-        "shape": { "type": "circle" },
-        "opacity": { "value": 0.8, "random": true },
-        "size": { "value": 3, "random": true },
-        "line_linked": { "enable": false },
-        "move": { "enable": true, "speed": 1, "direction": "none", "random": true }
-      },
-      "interactivity": {
-        "events": {
-          "onhover": { "enable": true, "mode": "repulse" },
-          "onclick": { "enable": true, "mode": "push" }
-        },
-        "modes": {
-          "repulse": { "distance": 100 },
-          "push": { "particles_nb": 4 }
-        }
-      },
-      "retina_detect": true
+    // Initialize particles.js after script loads
+    window.addEventListener('load', function() {
+      if (typeof particlesJS !== 'undefined') {
+        particlesJS("particles-js", {
+          "particles": {
+            "number": { "value": 80, "density": { "enable": true, "value_area": 800 } },
+            "color": { "value": "#ffffff" },
+            "shape": { "type": "circle" },
+            "opacity": { "value": 0.8, "random": true },
+            "size": { "value": 3, "random": true },
+            "line_linked": { "enable": false },
+            "move": { "enable": true, "speed": 1, "direction": "none", "random": true }
+          },
+          "interactivity": {
+            "events": {
+              "onhover": { "enable": true, "mode": "repulse" },
+              "onclick": { "enable": true, "mode": "push" }
+            },
+            "modes": {
+              "repulse": { "distance": 100 },
+              "push": { "particles_nb": 4 }
+            }
+          },
+          "retina_detect": true
+        });
+      }
     });
   </script>
 </body>
