--- a/index.html
+++ b/index.html
@@ -71,7 +71,63 @@
 </head>
 <body>
   <div id="particles-js"></div>
+  <!-- Add this inside <body>, outside the glass box -->
+<button id="showLogBtn" style="
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  padding: 10px 16px;
+  border-radius: 12px;
+  border: none;
+  background: rgba(255,255,255,0.1);
+  color: white;
+  font-weight: 600;
+  cursor: pointer;
+  z-index: 10;
+">Show Log</button>
 
+<div id="logOverlay" style="
+  position: fixed;
+  top: 60px;
+  right: 20px;
+  background: rgba(20,20,20,0.95);
+  padding: 15px;
+  border-radius: 12px;
+  font-size: 14px;
+  color: white;
+  display: none;
+  z-index: 10;
+  max-width: 220px;
+  box-shadow: 0 0 20px rgba(0,0,0,0.6);
+">
+  Loading log…
+</div>
+
+<script>
+async function loadLog() {
+  try {
+    const res = await fetch("log.json");
+    const data = await res.json();
+    document.getElementById("logOverlay").innerText = 
+      `Last Ping: ${data.lastPing}\nTime: ${data.timestamp}`;
+  } catch {
+    document.getElementById("logOverlay").innerText = "Could not load log.";
+  }
+}
+
+// Toggle overlay on button click
+const showLogBtn = document.getElementById("showLogBtn");
+const logOverlay = document.getElementById("logOverlay");
+
+showLogBtn.addEventListener("click", () => {
+  if (logOverlay.style.display === "none") {
+    loadLog();
+    logOverlay.style.display = "block";
+  } else {
+    logOverlay.style.display = "none";
+  }
+});
+</script>
   <div class="glass-box">
     <h2>Ping Saturn</h2>
     <br>
@@ -83,26 +139,45 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
   <script>
     // Webhook map - fixed variable name
-    const WEBHOOKS = {
-      "aadity": "https://api.pushcut.io/yIplredoAJ4kPmQMqcja7/notifications/Aadity%E2%80%99s%20Ping"
-      // add more like: "john": "https://api.pushcut.io/.../John%20Ping"
-    };
+    // Webhook map
+const WEBHOOKS = {
+  "aadity": "https://api.pushcut.io/yIplredoAJ4kPmQMqcja7/notifications/Aadity%E2%80%99s%20Ping"
+  // add more like: "john": "https://api.pushcut.io/.../John%20Ping"
+};
 
-    function sendPing() {
-      const name = document.getElementById("nameInput").value.trim().toLowerCase();
-      if (!name) {
-        alert("Please enter your name.");
-        return;
-      }
-      if (!(name in WEBHOOKS)) {
-        alert("Name not recognized.");
-        return;
-      }
-      const url = WEBHOOKS[name];
-      fetch(url, { mode: "no-cors" })
-        .then(() => alert("Ping sent for " + name.charAt(0).toUpperCase() + name.slice(1)))
-        .catch(() => alert("Failed to send ping"));
-    }
+function sendPing() {
+  const nameInput = document.getElementById("nameInput").value.trim().toLowerCase();
+  if (!nameInput) {
+    alert("Please enter your name.");
+    return;
+  }
+  if (!(nameInput in WEBHOOKS)) {
+    alert("Name not recognized.");
+    return;
+  }
+
+  const url = WEBHOOKS[nameInput];
+
+  // 1. send Pushcut webhook
+  fetch(url, { mode: "no-cors" })
+    .then(() => {
+      alert("Ping sent for " + nameInput.charAt(0).toUpperCase() + nameInput.slice(1));
+    })
+    .catch(() => alert("Failed to send ping"));
+
+  // 2. also trigger GitHub repo dispatch to update log.json
+  fetch("https://api.github.com/repos/sleeperofsaturn/Digital-Doorbell/dispatches", {
+    method: "POST",
+    headers: {
+      "Accept": "application/vnd.github+json",
+      "Authorization": "Bearer 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", // replace with your GitHub PAT
+    },
+    body: JSON.stringify({
+      event_type: "pinged",
+      client_payload: { name: nameInput }
+    })
+  }).catch(err => console.error("GitHub dispatch failed:", err));
+}
 
     // Initialize particles.js after script loads
     window.addEventListener('load', function() {
