--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Saturn's Digital Doorbell</title>
   <!-- Favicon with bell emoji -->
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><text y=%2214%22 font-size=%2216%22>🔔</text></svg>">
+  <link rel="icon" href="IMG_1066.png">
   <style>
     /* Reset */
     * { margin: 0; padding: 0; box-sizing: border-box; }
