--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
     // Webhook map
     const WEBHOOKS = {
       "aadity": "https://api.pushcut.io/yIplredoAJ4kPmQMqcja7/notifications/Aadity%E2%80%99s%20Ping"
+      "ganik": "https://api.pushcut.io/yIplredoAJ4kPmQMqcja7/notifications/Ganik%E2%80%99s%20Ping"
       "chinmay": "https://api.pushcut.io/yIplredoAJ4kPmQMqcja7/notifications/Chinmay%E2%80%99s%20Ping"
       // Add more like: "john": "https://api.pushcut.io/.../John%20Ping"
     };
