--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Saturn's Digital Doorbell</title>
-  <!-- Favicon with bell emoji -->
+  <!-- Favicon -->
   <link rel="icon" href="IMG_1066.png">
   <style>
     /* Reset */
@@ -83,7 +83,7 @@
       overflow-y: auto;
       font-size: 14px;
       -webkit-backdrop-filter: blur(4px);
-      backdrop-filter: 4px;
+      backdrop-filter: blur(4px);
       border-left: 1px solid rgba(255,255,255,0.1);
       box-shadow: -2px 0 20px rgba(0,0,0,0.6);
       z-index: 5;
@@ -104,6 +104,41 @@
       border-bottom: 1px solid rgba(255,255,255,0.1);
       padding-bottom: 6px;
     }
+
+    .reason-box {
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 40vh;
+      padding: 20px;
+      z-index: 2;
+    }
+
+    .reason-box textarea {
+      width: 100%;
+      min-height: 60px;
+      resize: none;
+      padding: 12px;
+      border-radius: 10px;
+      border: 1px solid rgba(255,255,255,0.2);
+      background: rgba(255,255,255,0.1);
+      color: #fff;
+      font-size: 14px;
+      outline: none;
+      text-align: left;
+    }
+
+    .reason-text {
+      margin-top: 6px;
+      font-size: 12px;
+      opacity: 0.8;
+      display: none;
+    }
+
+    .log-entry.open .reason-text {
+      display: block;
+    }
   </style>
 </head>
 <body>
@@ -114,6 +149,11 @@
     <br>
     <input type="text" id="nameInput" placeholder="Enter your name">
     <button onclick="sendPing()">Send Ping</button>
+  </div>
+
+  <!-- Bottom glass panel for reason -->
+  <div class="glass-box reason-box">
+    <textarea id="reasonInput" placeholder="Brief reason for ping..."></textarea>
   </div>
 
   <!-- Persistent log panel -->
@@ -130,7 +170,7 @@
     const WEBHOOKS = {
       "aadity": "https://api.pushcut.io/yIplredoAJ4kPmQMqcja7/notifications/Aadity%E2%80%99s%20Ping",
       "ganik": "https://api.pushcut.io/yIplredoAJ4kPmQMqcja7/notifications/Ganik%E2%80%99s%20Ping",
-      "chinmay": "https://api.pushcut.io/yIplredoAJ4kPmQMqcja7/notifications/Chinmay%E2%80%99s%20Ping",
+      "chinmay": "https://api.pushcut.io/yIplredoAJ4kPmQMqcja7/notifications/Chinmay%E2%80%99s%20Ping"
       // Add more like: "john": "https://api.pushcut.io/.../John%20Ping"
     };
 
@@ -142,6 +182,8 @@
     // Send ping & update log
     async function sendPing() {
       const nameInput = document.getElementById("nameInput").value.trim().toLowerCase();
+      const reasonInput = document.getElementById("reasonInput").value.trim();
+
       if (!nameInput) return alert("Please enter your name.");
       if (!(nameInput in WEBHOOKS)) return alert("Name not recognized.");
 
@@ -153,20 +195,21 @@
         .catch(() => alert("Failed to send ping"));
 
       try {
-        // 1. Fetch current logs
         const res = await fetch(`https://api.jsonbin.io/v3/b/${JSONBIN_ID}/latest`, {
           headers: { "X-Master-Key": JSONBIN_KEY }
         });
         const data = await res.json();
         let logs = data.record.logs || [];
 
-        // 2. Add new entry at top
-        logs.unshift({ name: nameInput, timestamp: new Date().toISOString() });
+        // add reason field
+        logs.unshift({ 
+          name: nameInput, 
+          reason: reasonInput || "No reason given", 
+          timestamp: new Date().toISOString() 
+        });
 
-        // 3. Keep last 8
         logs = logs.slice(0, 8);
 
-        // 4. Save back
         await fetch(`https://api.jsonbin.io/v3/b/${JSONBIN_ID}`, {
           method: "PUT",
           headers: {
@@ -202,10 +245,30 @@
     function renderLog(logs) {
       const container = document.getElementById("logEntries");
       container.innerHTML = "";
-      logs.forEach(log => {
+      logs.forEach((log, index) => {
         const div = document.createElement("div");
         div.className = "log-entry";
-        div.innerText = `${log.name.charAt(0).toUpperCase() + log.name.slice(1)}\n${new Date(log.timestamp).toLocaleString()}`;
+
+        const nameSpan = document.createElement("span");
+        nameSpan.style.cursor = "pointer";
+        nameSpan.style.fontWeight = "600";
+        nameSpan.innerText = log.name.charAt(0).toUpperCase() + log.name.slice(1);
+        nameSpan.onclick = () => {
+          div.classList.toggle("open");
+        };
+
+        const timeDiv = document.createElement("div");
+        timeDiv.style.fontSize = "12px";
+        timeDiv.style.opacity = "0.8";
+        timeDiv.innerText = new Date(log.timestamp).toLocaleString();
+
+        const reasonDiv = document.createElement("div");
+        reasonDiv.className = "reason-text";
+        reasonDiv.innerText = "Reason: " + log.reason;
+
+        div.appendChild(nameSpan);
+        div.appendChild(timeDiv);
+        div.appendChild(reasonDiv);
         container.appendChild(div);
       });
     }
