--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Saturn's Digital Doorbell</title>
-  <!-- Favicon -->
   <link rel="icon" href="IMG_1066.png">
   <style>
-    /* Reset */
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
     body {
-      background: #000; /* true black for OLED */
+      background: #000;
       color: #fff;
       font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", sans-serif;
       display: flex;
@@ -70,7 +68,6 @@
       background: rgba(0,122,255,1);
     }
 
-    /* Right-side log panel */
     #logPanel {
       position: fixed;
       top: 0;
@@ -88,12 +85,11 @@
       box-shadow: -2px 0 20px rgba(0,0,0,0.6);
       z-index: 5;
     }
-    /* Hide log panel on mobile */
+
     @media (max-width: 900px) {
-      #logPanel {
-        display: none;
-      }
+      #logPanel { display: none; }
     }
+
     #logPanel h3 {
       margin-bottom: 10px;
       font-weight: 600;
@@ -132,12 +128,15 @@
     .reason-text {
       margin-top: 6px;
       font-size: 12px;
-      opacity: 0.8;
-      display: none;
+      opacity: 0;
+      max-height: 0;
+      overflow: hidden;
+      transition: all 0.3s ease;
     }
 
     .log-entry.open .reason-text {
-      display: block;
+      opacity: 0.8;
+      max-height: 200px;
     }
   </style>
 </head>
@@ -151,36 +150,28 @@
     <button onclick="sendPing()">Send Ping</button>
   </div>
 
-  <!-- Bottom glass panel for reason -->
   <div class="glass-box reason-box">
     <textarea id="reasonInput" placeholder="Brief reason for ping..."></textarea>
   </div>
 
-  <!-- Persistent log panel -->
   <div id="logPanel">
     <h3>Recent Pings</h3>
     <div id="logEntries">Loading…</div>
   </div>
 
-  <!-- particles.js library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
 
   <script>
-    // Webhook map
     const WEBHOOKS = {
       "aadity": "https://api.pushcut.io/yIplredoAJ4kPmQMqcja7/notifications/Aadity%E2%80%99s%20Ping",
       "ganik": "https://api.pushcut.io/yIplredoAJ4kPmQMqcja7/notifications/Ganik%E2%80%99s%20Ping",
       "chinmay": "https://api.pushcut.io/yIplredoAJ4kPmQMqcja7/notifications/Chinmay%E2%80%99s%20Ping"
-      "*TEST*": "nothing"
-      // Add more like: "john": "https://api.pushcut.io/.../John%20Ping"
     };
 
-    // jsonbin.io config
     const JSONBIN_ID = "68a31acaae596e708fcd3922"; 
     const JSONBIN_KEY = "$2a$10$EFoDNu/JdnMgdB4fjvG3O.MyCIp.y0zU0PKSuIEnzG6.YfyiPdeUu"; 
-    const LOG_REFRESH_INTERVAL = 15000; // 15s auto-refresh
+    const LOG_REFRESH_INTERVAL = 15000;
 
-    // Send ping & update log
     async function sendPing() {
       const nameInput = document.getElementById("nameInput").value.trim().toLowerCase();
       const reasonInput = document.getElementById("reasonInput").value.trim();
@@ -190,7 +181,6 @@
 
       const url = WEBHOOKS[nameInput];
 
-      // Pushcut ping
       fetch(url, { mode: "no-cors" })
         .then(() => alert("Ping sent for " + nameInput.charAt(0).toUpperCase() + nameInput.slice(1)))
         .catch(() => alert("Failed to send ping"));
@@ -202,14 +192,13 @@
         const data = await res.json();
         let logs = data.record.logs || [];
 
-        // add reason field
         logs.unshift({ 
           name: nameInput, 
           reason: reasonInput || "No reason given", 
           timestamp: new Date().toISOString() 
         });
 
-        logs = logs.slice(0, 25);
+        logs = logs.slice(0, 8);
 
         await fetch(`https://api.jsonbin.io/v3/b/${JSONBIN_ID}`, {
           method: "PUT",
@@ -227,7 +216,6 @@
       }
     }
 
-    // Load log
     async function loadLog() {
       try {
         const res = await fetch(`https://api.jsonbin.io/v3/b/${JSONBIN_ID}/latest`, {
@@ -242,11 +230,10 @@
       }
     }
 
-    // Render logs in panel
     function renderLog(logs) {
       const container = document.getElementById("logEntries");
       container.innerHTML = "";
-      logs.forEach((log, index) => {
+      logs.forEach((log) => {
         const div = document.createElement("div");
         div.className = "log-entry";
 
@@ -254,9 +241,7 @@
         nameSpan.style.cursor = "pointer";
         nameSpan.style.fontWeight = "600";
         nameSpan.innerText = log.name.charAt(0).toUpperCase() + log.name.slice(1);
-        nameSpan.onclick = () => {
-          div.classList.toggle("open");
-        };
+        nameSpan.onclick = () => div.classList.toggle("open");
 
         const timeDiv = document.createElement("div");
         timeDiv.style.fontSize = "12px";
@@ -274,13 +259,9 @@
       });
     }
 
-    // Auto-refresh
     setInterval(loadLog, LOG_REFRESH_INTERVAL);
-
-    // Load initially
     window.addEventListener("load", loadLog);
 
-    // Initialize particles.js
     window.addEventListener('load', function() {
       if (typeof particlesJS !== 'undefined') {
         particlesJS("particles-js", {
