--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
           timestamp: new Date().toISOString() 
         });
 
-        logs = logs.slice(0, 8);
+        // Keep last 20
+        logs = logs.slice(0, 20);
 
         await fetch(`https://api.jsonbin.io/v3/b/${JSONBIN_ID}`, {
           method: "PUT",
