--- a/index.html
+++ b/index.html
@@ -167,18 +167,46 @@
     const JSONBIN_KEY = "$2a$10$EFoDNu/JdnMgdB4fjvG3O.MyCIp.y0zU0PKSuIEnzG6.YfyiPdeUu";
     const LOG_REFRESH_INTERVAL = 15000; // 15s
 
-    // Helper: capitalize first letter for display/notification
+    // Cooldown tracker
+    let lastPingTime = 0;
+
+    // Cryptic alias map
+    const crypticMap = {
+      "ganik": "Garlic",
+      "aadity": "Witch of Venus",
+      "chinmay": "Chimney"
+    };
+
     function cap(s) { return s ? s.charAt(0).toUpperCase() + s.slice(1) : s; }
 
-    // Send ping, notify via ntfy, and persist log (keep last 20)
     async function sendPing() {
+      const now = Date.now();
+      if (now - lastPingTime < 5000) {
+        alert("Please wait a few seconds before sending another ping.");
+        return;
+      }
+      lastPingTime = now;
+
       const nameInput = document.getElementById("nameInput").value.trim().toLowerCase();
-      const reasonInput = document.getElementById("reasonInput").value.trim();
+      let reasonInput = document.getElementById("reasonInput").value.trim();
 
       if (!nameInput) return alert("Please enter your name.");
 
-      // --- ntfy.sh notification ---
-      const message = `${cap(nameInput)} rang the bell\nReason: ${reasonInput || "No reason given"}`;
+      // Suggestive reason prompt
+      if (!reasonInput) {
+        if (confirm("Do you want to add a reason for the ping?")) {
+          return; // user can type reason and click again
+        }
+        reasonInput = "No reason given";
+      }
+
+      // Notification text
+      const cryptic = crypticMap[nameInput];
+      const message = cryptic
+        ? `🔔 ${cryptic} pinged you`
+        : `🔔 ${cap(nameInput)} rang the bell\nReason: ${reasonInput}`;
+
+      // --- Send ntfy notification ---
       try {
         await fetch("https://ntfy.sh/Doorbell-Pings", {
           method: "POST",
@@ -189,7 +217,7 @@
         console.error("Failed to send ntfy notification:", e);
       }
 
-      // --- JSONBin: load, update, save ---
+      // --- JSONBin: update log with real details ---
       try {
         const res = await fetch(`https://api.jsonbin.io/v3/b/${JSONBIN_ID}/latest`, {
           headers: { "X-Master-Key": JSONBIN_KEY }
@@ -199,11 +227,10 @@
 
         logs.unshift({
           name: nameInput,
-          reason: reasonInput || "No reason given",
+          reason: reasonInput,
           timestamp: new Date().toISOString()
         });
 
-        // Keep last 20
         logs = logs.slice(0, 20);
 
         await fetch(`https://api.jsonbin.io/v3/b/${JSONBIN_ID}`, {
@@ -222,7 +249,7 @@
       }
     }
 
-    // Load log from JSONBin
+    // Load log
     async function loadLog() {
       try {
         const res = await fetch(`https://api.jsonbin.io/v3/b/${JSONBIN_ID}/latest`, {
@@ -237,7 +264,7 @@
       }
     }
 
-    // Render right-pane log with expandable reason
+    // Render log
     function renderLog(logs) {
       const container = document.getElementById("logEntries");
       container.innerHTML = "";
