--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
     // Cryptic lines map
     const crypticLines = {
       "chinmay": 'Someone rang the doorbell 🔔\n"The chimney blew white smoke"',
-      "aadity": '"The witch of Venus has summoned you" 🔔',
-      "ganik": '"The garlic has ripened" 🔔'
+      "aadity": 'Someone rang the doorbell 🔔\n"The witch of Venus has summoned you"',
+      "ganik": 'Someone rang the doorbell 🔔\n"The garlic has ripened"'
     };
 
     function cap(s) { return s ? s.charAt(0).toUpperCase() + s.slice(1) : s; }
