--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
       transform: translateX(-50%);
       width: 40vh;
       padding: 20px;
+      padding-bottom: 50px;
       z-index: 2;
     }
 
