--- a/index.html
+++ b/index.html
@@ -295,34 +295,39 @@
     }
 
     // Render log
-    function renderLog(logs) {
-      const container = document.getElementById("logEntries");
-      container.innerHTML = "";
-      logs.forEach((log) => {
-        const div = document.createElement("div");
-        div.className = "log-entry";
+    // Render log
+function renderLog(logs) {
+  const container = document.getElementById("logEntries");
+  container.innerHTML = "";
+  logs.forEach((log) => {
+    const div = document.createElement("div");
+    div.className = "log-entry";
 
-        const nameSpan = document.createElement("span");
-        nameSpan.style.cursor = "pointer";
-        nameSpan.style.fontWeight = "600";
-        nameSpan.innerText = cap(log.name);
-        nameSpan.onclick = () => div.classList.toggle("open");
+    const nameSpan = document.createElement("span");
+    nameSpan.style.cursor = "pointer";
+    nameSpan.style.fontWeight = "600";
 
-        const timeDiv = document.createElement("div");
-        timeDiv.style.fontSize = "12px";
-        timeDiv.style.opacity = "0.8";
-        timeDiv.innerText = new Date(log.timestamp).toLocaleString();
+    // Use alias if available, else fallback to capitalized name
+    const alias = crypticAliases[log.name.toLowerCase()];
+    nameSpan.innerText = alias ? alias : cap(log.name);
 
-        const reasonDiv = document.createElement("div");
-        reasonDiv.className = "reason-text";
-        reasonDiv.innerText = "Reason: " + log.reason;
+    nameSpan.onclick = () => div.classList.toggle("open");
 
-        div.appendChild(nameSpan);
-        div.appendChild(timeDiv);
-        div.appendChild(reasonDiv);
-        container.appendChild(div);
-      });
-    }
+    const timeDiv = document.createElement("div");
+    timeDiv.style.fontSize = "12px";
+    timeDiv.style.opacity = "0.8";
+    timeDiv.innerText = new Date(log.timestamp).toLocaleString();
+
+    const reasonDiv = document.createElement("div");
+    reasonDiv.className = "reason-text";
+    reasonDiv.innerText = "Reason: " + log.reason;
+
+    div.appendChild(nameSpan);
+    div.appendChild(timeDiv);
+    div.appendChild(reasonDiv);
+    container.appendChild(div);
+  });
+}
 
     // Auto-refresh
     setInterval(loadLog, LOG_REFRESH_INTERVAL);
