--- a/index.html
+++ b/index.html
@@ -180,7 +180,23 @@
   </div>
 
   <div id="aliasBox"></div>
-
+  <!-- Floating Control Room Button -->
+<a href="control.html" style="
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  text-decoration: none;
+  font-size: 26px;
+  padding: 10px 14px;
+  border-radius: 50%;
+  background: #333;
+  color: white;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+  cursor: pointer;
+  z-index: 9999;
+">
+  ⚙
+</a>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
 
   <script>
