--- a/index.html
+++ b/index.html
@@ -212,14 +212,16 @@
     const crypticLines = {
       "chinmay": 'Someone rang the doorbell 🔔\n"The chimney blew white smoke"',
       "aadity": '"The witch of Venus has summoned you" 🔔',
-      "ganik": '"The garlic has ripened" 🔔'
+      "ganik": '"The garlic has ripened" 🔔',
+      "sannidhya": '"Testing Successful" 🎉'
     };
 
     // Cryptic aliases (for on-screen reveal)
     const crypticAliases = {
       "chinmay": "Chimney",
       "aadity": "Witch of Venus",
-      "ganik": "Garlic"
+      "ganik": "Garlic",
+      "sannidhya": "Saturn"
     };
 
     function cap(s) { return s ? s.charAt(0).toUpperCase() + s.slice(1) : s; }
